k8s-pod.yml
apiVersion: v1
kind: Pod
metadata: 
  name: go-microservice-demo
  labels: 
    language: go
    env: test
spec:
  containers:
  - name: go-microservice-demo
    image: go-microservice-demo
    imagePullPolicy: IfNotPresent
    ports:
    - containerPort: 8080
      protocol: TCP
