k8s-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: go-microservice-demo-ingress
  labels:
    app: go-microservice-demo
    tier: frontend
spec:
  backend:
    serviceName: go-microservice-demo
    servicePort: 8080
